switch urls from being absolute so the site can run in a subdir

--- a/site/13century.html
+++ b/site/13century.html
@@ -17,7 +17,7 @@
                 </ul>
             </div>
             <div id="base">
-                <a id="floorplan-thumb" href="/" data-rel="back"></a>
+                <a id="floorplan-thumb" href="../" data-rel="back"></a>
             </div>
         </div>
         </div>
