--- a/site/18century.html
+++ b/site/18century.html
@@ -15,7 +15,7 @@
                   <li><div class="icon-idea"></div><a href="http://en.wikipedia.org/wiki/Spinning_jenny">Invention of the Spinning Jenny</a></li>
               </ul>            </div>
             <div id="base">
-                <a id="floorplan-thumb" href="/" data-rel="back"></a>
+                <a id="floorplan-thumb" href="../" data-rel="back"></a>
             </div>
         </div>
         </div>
