add open-graph tags

--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,17 @@
 <html>
 <head>
   <title>Frame</title>
+  <meta name="description" content="ArtBytes 2012 prize winner by Jonathan Julian and Andy Mangold">
+  <meta property="og:description" content="ArtBytes 2012 prize winner by Jonathan Julian and Andy Mangold">
   <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no">
   <meta name="apple-touch-fullscreen" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta property="og:site_name" content="Frame: Put Art in its place" /> 
+  <meta property="og:title" content="Frame: Put Art in its place" /> 
+  <meta property="og:type" content="website" /> 
+  <meta property="og:image" content="http://jonathanjulian.com/frame/icon.png"/>
+  <meta property="og:url" content="http://jonathanjulian.com/frame/"/>
   <link rel="apple-touch-icon-precomposed" href="icon.png" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
   <link rel="stylesheet" href="css/mme.css" />
